<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:id="@+id/linearLayout">

    <ImageView
        android:src="@drawable/location"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/location_name"/>

    <TextView
        android:id="@+id/location_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/location_type"/>

    <TextView
        android:id="@+id/location_dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/location_dimension"/>
</LinearLayout>