<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Episode.ShowEpisode"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <ImageView
        android:src="@drawable/tv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/episode_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/episode_name"/>

    <TextView
        android:id="@+id/air_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/air_date"/>

    <TextView
        android:id="@+id/n_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/n_episode"/>


</LinearLayout>